Archive2/b5/6f71c4b26e6030/output
main.cpp: In member function 'void tittays::dostuff()':
main.cpp:5:10: error: capture of non-variable 'tittays::tits' 
       [ &tits ] () { }; // legal?
          ^
main.cpp:2:8: note: 'int tittays::tits' declared here
    int tits;
        ^
